--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 	},
     "require-dev": {
         "way/generators": "2.*",
-		"fzaninotto/faker": "1.*"
+		"fzaninotto/faker": "1.*",
+        "barryvdh/laravel-debugbar": "1.*"
     },
 	"autoload": {
         "psr-4": {
